  - Add broadcast messages and alerts below sub-nav
  - Better empty state for Groups view
  - Update ruby-prof to 0.16.2. !6026 (Elan Ruusamäe)
  - Replace bootstrap caret with fontawesome caret (ClemMakesApps)
  - Fix unnecessary escaping of reserved HTML characters in milestone title. !6533
  - Add organization field to user profile
  - Fix enter key when navigating search site search dropdown. !6643 (Brennan Roberts)
  - Fix deploy status responsiveness error !6633
  - Make searching for commits case insensitive
  - Fix resolved discussion display in side-by-side diff view !6575
  - Optimize GitHub importing for speed and memory
  - API: expose pipeline data in builds API (!6502, Guilherme Salazar)
  - Notify the Merger about merge after successful build (Dimitris Karakasilis)
  - Reorder issue and merge request titles to show IDs first. !6503 (Greg Laubenstein)
  - Add a new gitlab:users:clear_all_authentication_tokens task. !6745
  - Reduce queries needed to find users using their SSH keys when pushing commits
  - Prevent rendering the link to all when the author has no access (Katarzyna Kobierska Ula Budziszewska)
  - Fix broken repository 500 errors in project list
  - Fix Pipeline list commit column width should be adjusted
  - Close todos when accepting merge requests via the API !6486 (tonygambone)
  - Changed Slack service user referencing from full name to username (Sebastian Poxhofer)
  - Retouch environments list and deployments list
  - Add Container Registry on/off status to Admin Area !6638 (the-undefined)
  - Allow empty merge requests !6384 (Artem Sidorenko)
  - Grouped pipeline dropdown is a scrollable container
  - Cleanup Ci::ApplicationController. !6757 (Takuya Noguchi)
  - Fix a typo in doc/api/labels.md
  - API: all unknown routing will be handled with 404 Not Found
  - Make guests unable to view MRs on private projects

v 8.12.5 (unreleased)
  - Update the mail_room gem to 0.8.1 to fix a race condition with the mailbox watching thread
