@@ -75,6 +75,7 @@ v 8.13.0 (unreleased)
   - Replace bootstrap caret with fontawesome caret (ClemMakesApps)
   - Fix unnecessary escaping of reserved HTML characters in milestone title. !6533
   - Add organization field to user profile
+  - Ignore deployment for statistics in Cycle Analytics, except in staging and production stages
   - Fix enter key when navigating search site search dropdown. !6643 (Brennan Roberts)
   - Fix deploy status responsiveness error !6633
   - Make searching for commits case insensitive
